--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,30 @@
 version: "3.5"
-#
+
 services:
+  api01: &api
+    image: zecs/api-insana-do-rei-zeca:latest
+    hostname: api01
+    environment:
+      - DB_HOSTNAME=db
+  
+    ports:
+      - "8081:8080"
+    depends_on:
+      - db
+    deploy:
+      resources:
+        limits:
+          cpus: "0.50"
+          memory: "200MB"
+
+  api02:
+    <<: *api 
+    hostname: api02
+    environment:
+      - DB_HOSTNAME=db
+    ports:
+      - "8082:8080"
+
   db:
     image: postgres:latest
     hostname: db
@@ -15,9 +39,20 @@ services:
     deploy:
       resources:
         limits:
-          # Note que a soma de todos os limites dos serviços
-          # aqui declarados é de 1.5 unidades de CPU e 550MB
-          # de memória. A distribuição feita aqui é apenas
-          # um exemplo – distribua como quiser.
-          cpus: "0.13"
+          cpus: "0.30"
           memory: "140MB"
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - api01
+      - api02
+    ports:
+      - "9999:9999"
+    deploy:
+      resources:
+        limits:
+          cpus: "0.20"
+          memory: "10MB"
