--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,3 +56,9 @@ services:
         limits:
           cpus: "0.20"
           memory: "10MB"
+
+
+networks:
+  default:
+    driver: bridge
+    name: rinha-nginx-2024q1
