--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,15 @@
 version: "3.5"
 
 services:
-  api01: &api
+  api1: &api
+    container_name: api1
     image: zecs/api-insana-do-rei-zeca:latest
-    hostname: api01
+    hostname: api1
     environment:
       - DB_HOSTNAME=db
   
     ports:
-      - "8081:8080"
+      - "8001:8000"
     depends_on:
       - db
     deploy:
@@ -17,13 +18,14 @@ services:
           cpus: "0.50"
           memory: "200MB"
 
-  api02:
+  api2:
     <<: *api 
-    hostname: api02
+    container_name: api2
+    hostname: api2
     environment:
       - DB_HOSTNAME=db
     ports:
-      - "8082:8080"
+      - "8002:8000"
 
   db:
     image: postgres:latest
@@ -47,8 +49,8 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
-      - api01
-      - api02
+      - api1
+      - api2
     ports:
       - "9999:9999"
     deploy:
