--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ h11==0.14.0
 idna==3.6
 psycopg2-binary==2.9.9
 pydantic==2.6.1
+pydantic-settings==2.2.1
 pydantic_core==2.16.2
+python-dotenv==1.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.27
 starlette==0.36.3
